--- a/index.html
+++ b/index.html
@@ -7,30 +7,97 @@
     <title>Penguin Fashion</title>
     <!-- tailwind css -->
     <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+        tailwind.config = {
+          theme: {
+            extend: {
+              colors: {
+                clifford: '#da373d',
+                price: '#FABE4C',
+                card: '#F1F1F1',
+              }
+            }
+          }
+        }
+      </script>
  </head>
  <body>
-    <header class="container mx-auto">
+    <header class="bg-amber-100">
         <!-- nav -->
         <!-- banner -->
-        <div>
-            <div>
+        <div class="container mx-auto xl:px-32 py-12 md:flex justify-center items-center">
+            <div class="space-y-6 px-4">
                 <h1 class="text-7xl uppercase"><span class="text-yellow-400">Be the Penguins</span> of Winter</h1>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iure, id.</p>
-                <button class="py-4 px-8 rounded-lg text-white uppercase bg-gradient-to-r from-[#A4BC46] to-[#85A019]">
+                <button class="py-4 px-8 rounded-lg text-white uppercase            bg-gradient-to-r from-[#A4BC46] to-[#85A019]">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 inline">
                         <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 00-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 00-16.536-1.84M7.5 14.25L5.106 5.272M6 20.25a.75.75 0 11-1.5 0 .75.75 0 011.5 0zm12.75 0a.75.75 0 11-1.5 0 .75.75 0 011.5 0z" />
-                      </svg>
-                      
-                    Buy Now</button>
+                      </svg> Buy Now</button>
             </div>
             <div>
-                <img src="images/model.png" alt="">
+                <img class="w-3/4 md:w-full" src="images/model.png" alt="">
             </div>
         </div>
 
     </header>
-    <main>
-
+    <main class="container mx-auto xl:px-32">
+        <!-- woman jacket section -->
+        <section class="mt-12">
+            <h2 class="text-5xl uppercase">Woman Jacket</h2>
+            <div>
+                <!-- jacket card one -->
+                <div class="p-5 rounded-2xl shadow-lg">
+                    <div class="rounded-2xl bg-card"><!--card image-->
+                        <img src="images/jacket-1.png" alt="">
+                    </div>
+                    <div> <!-- card body-->
+                        <h2 class="text-2xl">Yellow Coat Jacket</h2>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquid pariatur atque sunt officia fugit reiciendis!</p>
+                        <div class="flex justify-between"><!--card price & button-->
+                            <h2 class="text-4xl text-price">$323</h2>
+                            <button class="py-4 px-8 rounded-lg text-white uppercase            bg-gradient-to-r from-[#A4BC46] to-[#85A019]">
+                                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 inline">
+                                    <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 00-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 00-16.536-1.84M7.5 14.25L5.106 5.272M6 20.25a.75.75 0 11-1.5 0 .75.75 0 011.5 0zm12.75 0a.75.75 0 11-1.5 0 .75.75 0 011.5 0z" />
+                                  </svg> Buy Now</button>
+                        </div>
+                    </div>
+                </div>
+                <!-- jacket card tow -->
+                <div class="p-5 rounded-2xl shadow-lg">
+                    <div class="rounded-2xl bg-card"><!--card image-->
+                        <img src="images/jacket-1.png" alt="">
+                    </div>
+                    <div> <!-- card body-->
+                        <h2 class="text-2xl">Yellow Coat Jacket</h2>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquid pariatur atque sunt officia fugit reiciendis!</p>
+                        <div class="flex justify-between"><!--card price & button-->
+                            <h2 class="text-4xl text-price">$323</h2>
+                            <button class="py-4 px-8 rounded-lg text-white uppercase            bg-gradient-to-r from-[#A4BC46] to-[#85A019]">
+                                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 inline">
+                                    <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 00-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 00-16.536-1.84M7.5 14.25L5.106 5.272M6 20.25a.75.75 0 11-1.5 0 .75.75 0 011.5 0zm12.75 0a.75.75 0 11-1.5 0 .75.75 0 011.5 0z" />
+                                  </svg> Buy Now</button>
+                        </div>
+                    </div>
+                </div>
+                <!-- jacket card three -->
+                <div class="p-5 rounded-2xl shadow-lg">
+                    <div class="rounded-2xl bg-card"><!--card image-->
+                        <img src="images/jacket-1.png" alt="">
+                    </div>
+                    <div> <!-- card body-->
+                        <h2 class="text-2xl">Yellow Coat Jacket</h2>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquid pariatur atque sunt officia fugit reiciendis!</p>
+                        <div class="flex justify-between"><!--card price & button-->
+                            <h2 class="text-4xl text-price">$323</h2>
+                            <button class="py-4 px-8 rounded-lg text-white uppercase            bg-gradient-to-r from-[#A4BC46] to-[#85A019]">
+                                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 inline">
+                                    <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 00-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 00-16.536-1.84M7.5 14.25L5.106 5.272M6 20.25a.75.75 0 11-1.5 0 .75.75 0 011.5 0zm12.75 0a.75.75 0 11-1.5 0 .75.75 0 011.5 0z" />
+                                  </svg> Buy Now</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
