--- a/index.html
+++ b/index.html
@@ -38,13 +38,18 @@
                 <img class="w-3/4 md:w-full" src="images/model.png" alt="">
             </div>
         </div>
-
     </header>
+        <!----------------------------------------------------------- 
+                                header end
+        -------------------------------------------------------------->
+
+
     <main class="container mx-auto xl:px-32">
         <!-- woman jacket section -->
         <section class="mt-12">
             <h2 class="text-5xl uppercase">Woman Jacket</h2>
-            <div>
+            <!-- card -->
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
                 <!-- jacket card one -->
                 <div class="p-5 rounded-2xl shadow-lg">
                     <div class="rounded-2xl bg-card"><!--card image-->
@@ -65,7 +70,7 @@
                 <!-- jacket card tow -->
                 <div class="p-5 rounded-2xl shadow-lg">
                     <div class="rounded-2xl bg-card"><!--card image-->
-                        <img src="images/jacket-1.png" alt="">
+                        <img src="images/jacket-2.png" alt="">
                     </div>
                     <div> <!-- card body-->
                         <h2 class="text-2xl">Yellow Coat Jacket</h2>
@@ -82,7 +87,67 @@
                 <!-- jacket card three -->
                 <div class="p-5 rounded-2xl shadow-lg">
                     <div class="rounded-2xl bg-card"><!--card image-->
-                        <img src="images/jacket-1.png" alt="">
+                        <img src="images/jacket-3.png" alt="">
+                    </div>
+                    <div> <!-- card body-->
+                        <h2 class="text-2xl">Yellow Coat Jacket</h2>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquid pariatur atque sunt officia fugit reiciendis!</p>
+                        <div class="flex justify-between"><!--card price & button-->
+                            <h2 class="text-4xl text-price">$323</h2>
+                            <button class="py-4 px-8 rounded-lg text-white uppercase            bg-gradient-to-r from-[#A4BC46] to-[#85A019]">
+                                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 inline">
+                                    <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 00-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 00-16.536-1.84M7.5 14.25L5.106 5.272M6 20.25a.75.75 0 11-1.5 0 .75.75 0 011.5 0zm12.75 0a.75.75 0 11-1.5 0 .75.75 0 011.5 0z" />
+                                  </svg> Buy Now</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!---------------------- 
+            man jacket section
+        ------------------------->
+        <section class="mt-12">
+            <h2 class="text-5xl uppercase">Man Jacket</h2>
+            <!-- card -->
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
+                <!-- jacket card one -->
+                <div class="p-5 rounded-2xl shadow-lg">
+                    <div class="rounded-2xl bg-card"><!--card image-->
+                        <img src="images/jacket-4.png" alt="">
+                    </div>
+                    <div> <!-- card body-->
+                        <h2 class="text-2xl">Yellow Coat Jacket</h2>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquid pariatur atque sunt officia fugit reiciendis!</p>
+                        <div class="flex justify-between"><!--card price & button-->
+                            <h2 class="text-4xl text-price">$323</h2>
+                            <button class="py-4 px-8 rounded-lg text-white uppercase            bg-gradient-to-r from-[#A4BC46] to-[#85A019]">
+                                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 inline">
+                                    <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 00-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 00-16.536-1.84M7.5 14.25L5.106 5.272M6 20.25a.75.75 0 11-1.5 0 .75.75 0 011.5 0zm12.75 0a.75.75 0 11-1.5 0 .75.75 0 011.5 0z" />
+                                  </svg> Buy Now</button>
+                        </div>
+                    </div>
+                </div>
+                <!-- jacket card tow -->
+                <div class="p-5 rounded-2xl shadow-lg">
+                    <div class="rounded-2xl bg-card"><!--card image-->
+                        <img src="images/jacket-5.png" alt="">
+                    </div>
+                    <div> <!-- card body-->
+                        <h2 class="text-2xl">Yellow Coat Jacket</h2>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquid pariatur atque sunt officia fugit reiciendis!</p>
+                        <div class="flex justify-between"><!--card price & button-->
+                            <h2 class="text-4xl text-price">$323</h2>
+                            <button class="py-4 px-8 rounded-lg text-white uppercase            bg-gradient-to-r from-[#A4BC46] to-[#85A019]">
+                                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 inline">
+                                    <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 00-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 00-16.536-1.84M7.5 14.25L5.106 5.272M6 20.25a.75.75 0 11-1.5 0 .75.75 0 011.5 0zm12.75 0a.75.75 0 11-1.5 0 .75.75 0 011.5 0z" />
+                                  </svg> Buy Now</button>
+                        </div>
+                    </div>
+                </div>
+                <!-- jacket card three -->
+                <div class="p-5 rounded-2xl shadow-lg">
+                    <div class="rounded-2xl bg-card"><!--card image-->
+                        <img src="images/jacket-6.png" alt="">
                     </div>
                     <div> <!-- card body-->
                         <h2 class="text-2xl">Yellow Coat Jacket</h2>
