added other section

--- a/index.html
+++ b/index.html
@@ -163,6 +163,47 @@
                 </div>
             </div>
         </section>
+
+        <!-- other -->
+        <section class="grid grid-cols-1 md:grid-cols-2 mt-20">
+            <!-- card -->
+            <div class="pr-32">
+                <!-- card one -->
+                <div class="p-4 flex shadow-lg rounded-lg">
+                    <div>
+                        <img class="h-20" src="images/house.png" alt="">
+                    </div>
+                    <div>
+                        <h2 class="text-2xl">Find the Perfect Fit</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestiae, facere?</p>
+                    </div>
+                </div>
+                <!-- card tow -->
+                <div class="p-4 mt-5 flex shadow-lg rounded-lg">
+                    <div>
+                        <img class="h-20" src="images/house.png" alt="">
+                    </div>
+                    <div>
+                        <h2 class="text-2xl">Find the Perfect Fit</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestiae, facere?</p>
+                    </div>
+                </div>
+                <!-- card three -->
+                <div class="p-4 mt-5 flex shadow-lg rounded-lg">
+                    <div>
+                        <img class="h-20" src="images/house.png" alt="">
+                    </div>
+                    <div>
+                        <h2 class="text-2xl">Find the Perfect Fit</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestiae, facere?</p>
+                    </div>
+                </div>
+            </div>
+            <!-- side image -->
+            <div>
+                <img src="images/shopping.png" alt="">
+            </div>
+        </section>
     </main>
     <footer>
 
